Packaging files from multiple file downloader to ZIP archive.

--- a/selectablelistdlg.ui
+++ b/selectablelistdlg.ui
@@ -92,6 +92,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QCheckBox" name="checkZipFile">
+       <property name="text">
+        <string>Pack to ZIP file</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QDialogButtonBox" name="buttonBox">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
