--- a/settingstab.ui
+++ b/settingstab.ui
@@ -26,9 +26,9 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-1838</y>
+        <y>-916</y>
         <width>822</width>
-        <height>4153</height>
+        <height>4229</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -883,6 +883,48 @@
                   </item>
                   <item row="2" column="1">
                    <widget class="QLineEdit" name="editAWSSecretKey"/>
+                  </item>
+                 </layout>
+                </widget>
+               </item>
+               <item>
+                <widget class="QGroupBox" name="groupBox_17">
+                 <property name="title">
+                  <string>Translator cache</string>
+                 </property>
+                 <layout class="QHBoxLayout" name="horizontalLayout_25">
+                  <item>
+                   <widget class="QCheckBox" name="checkTranslatorCacheEnabled">
+                    <property name="text">
+                     <string>Cache translator results</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLabel" name="label_37">
+                    <property name="text">
+                     <string>Cache size</string>
+                    </property>
+                    <property name="alignment">
+                     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                    </property>
+                    <property name="buddy">
+                     <cstring>spinTranslatorCacheSize</cstring>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QSpinBox" name="spinTranslatorCacheSize">
+                    <property name="suffix">
+                     <string> Mb</string>
+                    </property>
+                    <property name="minimum">
+                     <number>1</number>
+                    </property>
+                    <property name="maximum">
+                     <number>99999999</number>
+                    </property>
+                   </widget>
                   </item>
                  </layout>
                 </widget>
@@ -2019,6 +2061,8 @@
   <tabstop>editAWSRegion</tabstop>
   <tabstop>editAWSAccessKey</tabstop>
   <tabstop>editAWSSecretKey</tabstop>
+  <tabstop>checkTranslatorCacheEnabled</tabstop>
+  <tabstop>spinTranslatorCacheSize</tabstop>
   <tabstop>listDictPaths</tabstop>
   <tabstop>buttonAddDictPath</tabstop>
   <tabstop>buttonDelDictPath</tabstop>
