--- a/settingstab.ui
+++ b/settingstab.ui
@@ -26,9 +26,9 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>0</y>
+        <y>-656</y>
         <width>822</width>
-        <height>4335</height>
+        <height>4226</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -543,57 +543,173 @@
             <property name="title">
              <string>Translator</string>
             </property>
-            <layout class="QHBoxLayout" name="horizontalLayout_3">
+            <layout class="QHBoxLayout" name="horizontalLayout_34">
              <item>
-              <widget class="QGroupBox" name="groupBox">
-               <property name="title">
-                <string>Online translation serivce</string>
-               </property>
-               <layout class="QVBoxLayout" name="verticalLayout_6">
-                <item>
-                 <widget class="QRadioButton" name="radioAtlas">
-                  <property name="text">
-                   <string>&amp;ATLAS by TCP</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QRadioButton" name="radioBingAPI">
-                  <property name="text">
-                   <string>&amp;Bing API</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QRadioButton" name="radioYandexAPI">
-                  <property name="text">
-                   <string>&amp;Yandex API</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QRadioButton" name="radioYandexCloud">
-                  <property name="text">
-                   <string>Yandex Cloud API</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QRadioButton" name="radioGoogleGTX">
-                  <property name="text">
-                   <string>Google GT&amp;X</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QRadioButton" name="radioAmazonAWS">
-                  <property name="text">
-                   <string>Amazon Translate</string>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
-              </widget>
+              <layout class="QVBoxLayout" name="verticalLayout_16">
+               <item>
+                <widget class="QGroupBox" name="groupBox">
+                 <property name="title">
+                  <string>Online translation serivce</string>
+                 </property>
+                 <layout class="QVBoxLayout" name="verticalLayout_6">
+                  <item>
+                   <widget class="QRadioButton" name="radioAtlas">
+                    <property name="text">
+                     <string>&amp;ATLAS by TCP</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QRadioButton" name="radioBingAPI">
+                    <property name="text">
+                     <string>&amp;Bing API</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QRadioButton" name="radioYandexAPI">
+                    <property name="text">
+                     <string>&amp;Yandex API</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QRadioButton" name="radioYandexCloud">
+                    <property name="text">
+                     <string>Yandex Cloud API</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QRadioButton" name="radioGoogleGTX">
+                    <property name="text">
+                     <string>Google GT&amp;X</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QRadioButton" name="radioAmazonAWS">
+                    <property name="text">
+                     <string>Amazon Translate</string>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </widget>
+               </item>
+               <item>
+                <widget class="QGroupBox" name="groupBox_19">
+                 <property name="title">
+                  <string>Net error handling</string>
+                 </property>
+                 <layout class="QVBoxLayout" name="verticalLayout_13">
+                  <item>
+                   <layout class="QHBoxLayout" name="horizontalLayout_25">
+                    <item>
+                     <widget class="QLabel" name="label_18">
+                      <property name="text">
+                       <string>Retrie&amp;s</string>
+                      </property>
+                      <property name="buddy">
+                       <cstring>tranRetryCnt</cstring>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QSpinBox" name="tranRetryCnt">
+                      <property name="minimum">
+                       <number>1</number>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
+                  </item>
+                 </layout>
+                </widget>
+               </item>
+               <item>
+                <widget class="QGroupBox" name="groupBox_17">
+                 <property name="title">
+                  <string>Translator cache</string>
+                 </property>
+                 <layout class="QVBoxLayout" name="verticalLayout_11">
+                  <item>
+                   <widget class="QCheckBox" name="checkTranslatorCacheEnabled">
+                    <property name="text">
+                     <string>Cache translator results</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <layout class="QHBoxLayout" name="horizontalLayout_3">
+                    <item>
+                     <widget class="QLabel" name="label_37">
+                      <property name="text">
+                       <string>Cache size</string>
+                      </property>
+                      <property name="buddy">
+                       <cstring>spinTranslatorCacheSize</cstring>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QSpinBox" name="spinTranslatorCacheSize">
+                      <property name="suffix">
+                       <string> Mb</string>
+                      </property>
+                      <property name="minimum">
+                       <number>1</number>
+                      </property>
+                      <property name="maximum">
+                       <number>99999999</number>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
+                  </item>
+                 </layout>
+                </widget>
+               </item>
+               <item>
+                <widget class="QGroupBox" name="groupBox_20">
+                 <property name="title">
+                  <string>Global context translator</string>
+                 </property>
+                 <layout class="QHBoxLayout" name="horizontalLayout_26">
+                  <item>
+                   <layout class="QHBoxLayout" name="horizontalLayout_9">
+                    <item>
+                     <widget class="QLabel" name="label_17">
+                      <property name="text">
+                       <string>Hotkey</string>
+                      </property>
+                      <property name="buddy">
+                       <cstring>gctxHotkey</cstring>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QKeySequenceEdit" name="gctxHotkey"/>
+                    </item>
+                   </layout>
+                  </item>
+                 </layout>
+                </widget>
+               </item>
+               <item>
+                <spacer name="verticalSpacer">
+                 <property name="orientation">
+                  <enum>Qt::Vertical</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>20</width>
+                   <height>40</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
+              </layout>
              </item>
              <item>
               <layout class="QVBoxLayout" name="verticalLayout">
@@ -649,44 +765,6 @@
                           </property>
                           <property name="value">
                            <number>18000</number>
-                          </property>
-                         </widget>
-                        </item>
-                       </layout>
-                      </item>
-                      <item>
-                       <layout class="QHBoxLayout" name="horizontalLayout_26">
-                        <item>
-                         <widget class="QLabel" name="label_18">
-                          <property name="text">
-                           <string>Retrie&amp;s</string>
-                          </property>
-                          <property name="buddy">
-                           <cstring>atlRetryCnt</cstring>
-                          </property>
-                         </widget>
-                        </item>
-                        <item>
-                         <widget class="QSpinBox" name="atlRetryCnt">
-                          <property name="minimum">
-                           <number>1</number>
-                          </property>
-                         </widget>
-                        </item>
-                        <item>
-                         <widget class="QLabel" name="label_19">
-                          <property name="text">
-                           <string>&amp;Delay</string>
-                          </property>
-                          <property name="buddy">
-                           <cstring>atlRetryTimeout</cstring>
-                          </property>
-                         </widget>
-                        </item>
-                        <item>
-                         <widget class="QSpinBox" name="atlRetryTimeout">
-                          <property name="suffix">
-                           <string> s</string>
                           </property>
                          </widget>
                         </item>
@@ -773,23 +851,6 @@
                      <string>When ATLAS returns spaces or empty - replace with original text</string>
                     </property>
                    </widget>
-                  </item>
-                  <item>
-                   <layout class="QHBoxLayout" name="horizontalLayout_9">
-                    <item>
-                     <widget class="QLabel" name="label_17">
-                      <property name="text">
-                       <string>Global translator hot&amp;key</string>
-                      </property>
-                      <property name="buddy">
-                       <cstring>gctxHotkey</cstring>
-                      </property>
-                     </widget>
-                    </item>
-                    <item>
-                     <widget class="QKeySequenceEdit" name="gctxHotkey"/>
-                    </item>
-                   </layout>
                   </item>
                  </layout>
                 </widget>
@@ -925,48 +986,6 @@
                   </item>
                   <item row="2" column="1">
                    <widget class="QLineEdit" name="editAWSSecretKey"/>
-                  </item>
-                 </layout>
-                </widget>
-               </item>
-               <item>
-                <widget class="QGroupBox" name="groupBox_17">
-                 <property name="title">
-                  <string>Translator cache</string>
-                 </property>
-                 <layout class="QHBoxLayout" name="horizontalLayout_25">
-                  <item>
-                   <widget class="QCheckBox" name="checkTranslatorCacheEnabled">
-                    <property name="text">
-                     <string>Cache translator results</string>
-                    </property>
-                   </widget>
-                  </item>
-                  <item>
-                   <widget class="QLabel" name="label_37">
-                    <property name="text">
-                     <string>Cache size</string>
-                    </property>
-                    <property name="alignment">
-                     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-                    </property>
-                    <property name="buddy">
-                     <cstring>spinTranslatorCacheSize</cstring>
-                    </property>
-                   </widget>
-                  </item>
-                  <item>
-                   <widget class="QSpinBox" name="spinTranslatorCacheSize">
-                    <property name="suffix">
-                     <string> Mb</string>
-                    </property>
-                    <property name="minimum">
-                     <number>1</number>
-                    </property>
-                    <property name="maximum">
-                     <number>99999999</number>
-                    </property>
-                   </widget>
                   </item>
                  </layout>
                 </widget>
@@ -2090,15 +2109,16 @@
   <tabstop>radioYandexCloud</tabstop>
   <tabstop>radioGoogleGTX</tabstop>
   <tabstop>radioAmazonAWS</tabstop>
+  <tabstop>tranRetryCnt</tabstop>
+  <tabstop>checkTranslatorCacheEnabled</tabstop>
+  <tabstop>spinTranslatorCacheSize</tabstop>
+  <tabstop>gctxHotkey</tabstop>
   <tabstop>atlHost</tabstop>
   <tabstop>atlPort</tabstop>
-  <tabstop>atlRetryCnt</tabstop>
-  <tabstop>atlRetryTimeout</tabstop>
   <tabstop>atlToken</tabstop>
   <tabstop>atlSSLProto</tabstop>
   <tabstop>buttonAtlClean</tabstop>
   <tabstop>checkEmptyRestore</tabstop>
-  <tabstop>gctxHotkey</tabstop>
   <tabstop>editBingKey</tabstop>
   <tabstop>editYandexKey</tabstop>
   <tabstop>editYandexCloudFolderID</tabstop>
@@ -2106,8 +2126,6 @@
   <tabstop>editAWSRegion</tabstop>
   <tabstop>editAWSAccessKey</tabstop>
   <tabstop>editAWSSecretKey</tabstop>
-  <tabstop>checkTranslatorCacheEnabled</tabstop>
-  <tabstop>spinTranslatorCacheSize</tabstop>
   <tabstop>listDictPaths</tabstop>
   <tabstop>buttonAddDictPath</tabstop>
   <tabstop>buttonDelDictPath</tabstop>
