--- a/auxdictionary.ui
+++ b/auxdictionary.ui
@@ -43,18 +43,15 @@
        </item>
       </layout>
      </widget>
-     <widget class="CGDTextBrowser" name="browser"/>
+     <widget class="QTextBrowser" name="browser">
+      <property name="openLinks">
+       <bool>false</bool>
+      </property>
+     </widget>
     </widget>
    </item>
   </layout>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>CGDTextBrowser</class>
-   <extends>QTextBrowser</extends>
-   <header>specwidgets.h</header>
-  </customwidget>
- </customwidgets>
  <tabstops>
   <tabstop>editWord</tabstop>
   <tabstop>btnClear</tabstop>
