--- a/settingstab.ui
+++ b/settingstab.ui
@@ -27,8 +27,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>822</width>
-        <height>4297</height>
+        <width>825</width>
+        <height>4285</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -627,6 +627,13 @@
                     </property>
                    </widget>
                   </item>
+                  <item>
+                   <widget class="QRadioButton" name="radioGoogleCloud">
+                    <property name="text">
+                     <string>Google Cloud</string>
+                    </property>
+                   </widget>
+                  </item>
                  </layout>
                 </widget>
                </item>
@@ -1019,6 +1026,43 @@
                   </item>
                   <item row="2" column="1">
                    <widget class="QLineEdit" name="editAWSSecretKey"/>
+                  </item>
+                 </layout>
+                </widget>
+               </item>
+               <item>
+                <widget class="QGroupBox" name="groupBox_22">
+                 <property name="title">
+                  <string>Google Cloud </string>
+                 </property>
+                 <layout class="QVBoxLayout" name="verticalLayout_20">
+                  <item>
+                   <layout class="QVBoxLayout" name="verticalLayout_19">
+                    <item>
+                     <widget class="QLabel" name="label_40">
+                      <property name="text">
+                       <string>GCP service JSON key file</string>
+                      </property>
+                      <property name="buddy">
+                       <cstring>editGcpJsonKey</cstring>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <layout class="QHBoxLayout" name="horizontalLayout_39">
+                      <item>
+                       <widget class="QLineEdit" name="editGcpJsonKey"/>
+                      </item>
+                      <item>
+                       <widget class="QPushButton" name="buttonGcpJsonFile">
+                        <property name="text">
+                         <string>...</string>
+                        </property>
+                       </widget>
+                      </item>
+                     </layout>
+                    </item>
+                   </layout>
                   </item>
                  </layout>
                 </widget>
@@ -2144,6 +2188,7 @@
   <tabstop>radioYandexCloud</tabstop>
   <tabstop>radioGoogleGTX</tabstop>
   <tabstop>radioAmazonAWS</tabstop>
+  <tabstop>radioGoogleCloud</tabstop>
   <tabstop>tranRetryCnt</tabstop>
   <tabstop>checkTranslatorCacheEnabled</tabstop>
   <tabstop>spinTranslatorCacheSize</tabstop>
@@ -2161,6 +2206,8 @@
   <tabstop>editAWSRegion</tabstop>
   <tabstop>editAWSAccessKey</tabstop>
   <tabstop>editAWSSecretKey</tabstop>
+  <tabstop>editGcpJsonKey</tabstop>
+  <tabstop>buttonGcpJsonFile</tabstop>
   <tabstop>listDictPaths</tabstop>
   <tabstop>buttonAddDictPath</tabstop>
   <tabstop>buttonDelDictPath</tabstop>
@@ -2237,12 +2284,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>173</x>
-     <y>122</y>
+     <x>228</x>
+     <y>998</y>
     </hint>
     <hint type="destinationlabel">
-     <x>172</x>
-     <y>154</y>
+     <x>228</x>
+     <y>1029</y>
     </hint>
    </hints>
   </connection>
@@ -2253,12 +2300,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>743</x>
-     <y>122</y>
+     <x>787</x>
+     <y>998</y>
     </hint>
     <hint type="destinationlabel">
-     <x>791</x>
-     <y>155</y>
+     <x>786</x>
+     <y>1028</y>
     </hint>
    </hints>
   </connection>
@@ -2269,12 +2316,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>216</x>
-     <y>218</y>
+     <x>222</x>
+     <y>1090</y>
     </hint>
     <hint type="destinationlabel">
-     <x>416</x>
-     <y>249</y>
+     <x>422</x>
+     <y>1120</y>
     </hint>
    </hints>
   </connection>
@@ -2285,12 +2332,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>216</x>
-     <y>218</y>
+     <x>222</x>
+     <y>1090</y>
     </hint>
     <hint type="destinationlabel">
-     <x>416</x>
-     <y>280</y>
+     <x>422</x>
+     <y>1150</y>
     </hint>
    </hints>
   </connection>
@@ -2301,12 +2348,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>216</x>
-     <y>218</y>
+     <x>222</x>
+     <y>1090</y>
     </hint>
     <hint type="destinationlabel">
-     <x>416</x>
-     <y>311</y>
+     <x>422</x>
+     <y>1180</y>
     </hint>
    </hints>
   </connection>
@@ -2317,12 +2364,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>216</x>
-     <y>218</y>
+     <x>222</x>
+     <y>1090</y>
     </hint>
     <hint type="destinationlabel">
-     <x>416</x>
-     <y>342</y>
+     <x>422</x>
+     <y>1210</y>
     </hint>
    </hints>
   </connection>
@@ -2333,12 +2380,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>181</x>
-     <y>2214</y>
+     <x>247</x>
+     <y>3048</y>
     </hint>
     <hint type="destinationlabel">
-     <x>335</x>
-     <y>2247</y>
+     <x>345</x>
+     <y>3080</y>
     </hint>
    </hints>
   </connection>
@@ -2349,12 +2396,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>154</x>
-     <y>2214</y>
+     <x>220</x>
+     <y>3048</y>
     </hint>
     <hint type="destinationlabel">
-     <x>415</x>
-     <y>2248</y>
+     <x>417</x>
+     <y>3079</y>
     </hint>
    </hints>
   </connection>
@@ -2365,12 +2412,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>100</x>
-     <y>2214</y>
+     <x>166</x>
+     <y>3048</y>
     </hint>
     <hint type="destinationlabel">
-     <x>779</x>
-     <y>2246</y>
+     <x>775</x>
+     <y>3079</y>
     </hint>
    </hints>
   </connection>
@@ -2381,12 +2428,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>173</x>
-     <y>2214</y>
+     <x>239</x>
+     <y>3048</y>
     </hint>
     <hint type="destinationlabel">
-     <x>779</x>
-     <y>2277</y>
+     <x>775</x>
+     <y>3109</y>
     </hint>
    </hints>
   </connection>
@@ -2397,12 +2444,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>131</x>
-     <y>2214</y>
+     <x>197</x>
+     <y>3048</y>
     </hint>
     <hint type="destinationlabel">
-     <x>305</x>
-     <y>2280</y>
+     <x>418</x>
+     <y>3111</y>
     </hint>
    </hints>
   </connection>
@@ -2413,12 +2460,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>221</x>
-     <y>2214</y>
+     <x>287</x>
+     <y>3048</y>
     </hint>
     <hint type="destinationlabel">
-     <x>780</x>
-     <y>2214</y>
+     <x>776</x>
+     <y>3048</y>
     </hint>
    </hints>
   </connection>
@@ -2429,12 +2476,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>790</x>
-     <y>-1456</y>
+     <x>785</x>
+     <y>-798</y>
     </hint>
     <hint type="destinationlabel">
-     <x>790</x>
-     <y>-1425</y>
+     <x>785</x>
+     <y>-770</y>
     </hint>
    </hints>
   </connection>
@@ -2445,12 +2492,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>522</x>
-     <y>203</y>
+     <x>600</x>
+     <y>1096</y>
     </hint>
     <hint type="destinationlabel">
-     <x>534</x>
-     <y>232</y>
+     <x>600</x>
+     <y>1131</y>
     </hint>
    </hints>
   </connection>
@@ -2461,12 +2508,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>584</x>
-     <y>212</y>
+     <x>600</x>
+     <y>1096</y>
     </hint>
     <hint type="destinationlabel">
-     <x>580</x>
-     <y>262</y>
+     <x>600</x>
+     <y>1166</y>
     </hint>
    </hints>
   </connection>
@@ -2477,12 +2524,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>601</x>
-     <y>207</y>
+     <x>600</x>
+     <y>1096</y>
     </hint>
     <hint type="destinationlabel">
-     <x>598</x>
-     <y>304</y>
+     <x>600</x>
+     <y>1201</y>
     </hint>
    </hints>
   </connection>
