--- a/settingstab.ui
+++ b/settingstab.ui
@@ -28,7 +28,7 @@
         <x>0</x>
         <y>0</y>
         <width>822</width>
-        <height>4536</height>
+        <height>4542</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -146,6 +146,13 @@
                   </property>
                   <property name="text">
                    <string>Fetch images for novels</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QCheckBox" name="checkDownloaderCleanCompleted">
+                  <property name="text">
+                   <string>Clean completed downloads</string>
                   </property>
                  </widget>
                 </item>
@@ -2218,6 +2225,7 @@
   <tabstop>checkLogNetworkRequests</tabstop>
   <tabstop>checkJSLogConsole</tabstop>
   <tabstop>checkPixivFetchImages</tabstop>
+  <tabstop>checkDownloaderCleanCompleted</tabstop>
   <tabstop>checkPdfExtractImages</tabstop>
   <tabstop>spinPdfImageQuality</tabstop>
   <tabstop>spinPdfImageMaxSize</tabstop>
