--- a/searchtab.ui
+++ b/searchtab.ui
@@ -112,6 +112,9 @@
       <property name="mouseTracking">
        <bool>true</bool>
       </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
       <property name="selectionMode">
        <enum>QAbstractItemView::SingleSelection</enum>
       </property>
