--- a/workermonitor.ui
+++ b/workermonitor.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Background workers monitor</string>
+   <string>Background worker monitor</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
