--- a/utils/pixivindextab.ui
+++ b/utils/pixivindextab.ui
@@ -77,6 +77,64 @@
     </layout>
    </item>
    <item>
+    <widget class="QWidget" name="widget" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Extractor filter:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="labelExtractorFilter">
+        <property name="font">
+         <font>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>TextLabel</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="Line" name="line_2">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Results filter</string>
+        </property>
+        <property name="buddy">
+         <cstring>editFilter</cstring>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="editFilter"/>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
     <widget class="QTableView" name="table">
      <property name="alternatingRowColors">
       <bool>true</bool>
@@ -143,6 +201,7 @@
   <tabstop>comboSort</tabstop>
   <tabstop>buttonTranslateTitles</tabstop>
   <tabstop>buttonReport</tabstop>
+  <tabstop>editFilter</tabstop>
   <tabstop>buttonStopTranslator</tabstop>
  </tabstops>
  <resources/>
