--- a/utils/pixivindexlimitsdialog.ui
+++ b/utils/pixivindexlimitsdialog.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>CSearchLimitsDialog</class>
- <widget class="QDialog" name="CSearchLimitsDialog">
+ <class>CPixivIndexLimitsDialog</class>
+ <widget class="QDialog" name="CPixivIndexLimitsDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>459</width>
-    <height>183</height>
+    <height>336</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -27,6 +27,32 @@
      </property>
      <layout class="QFormLayout" name="formLayout">
       <item row="0" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Keywords</string>
+        </property>
+        <property name="buddy">
+         <cstring>editKeywords</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="editKeywords"/>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string>Search mode</string>
+        </property>
+        <property name="buddy">
+         <cstring>comboMode</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QComboBox" name="comboMode"/>
+      </item>
+      <item row="2" column="0">
        <widget class="QLabel" name="label">
         <property name="text">
          <string>Max results count</string>
@@ -36,7 +62,7 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
+      <item row="2" column="1">
        <widget class="QSpinBox" name="spinMaxCount">
         <property name="specialValueText">
          <string>All</string>
@@ -49,14 +75,14 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
+      <item row="3" column="0">
        <widget class="QCheckBox" name="checkDateFrom">
         <property name="text">
          <string>Date from</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="3" column="1">
        <widget class="QDateEdit" name="dateFrom">
         <property name="enabled">
          <bool>false</bool>
@@ -66,20 +92,53 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
+      <item row="4" column="0">
        <widget class="QCheckBox" name="checkDateTo">
         <property name="text">
          <string>Date to</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
+      <item row="4" column="1">
        <widget class="QDateEdit" name="dateTo">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="calendarPopup">
          <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="0">
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Text length</string>
+        </property>
+        <property name="buddy">
+         <cstring>comboLength</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="1">
+       <widget class="QComboBox" name="comboLength"/>
+      </item>
+      <item row="6" column="0">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>Language</string>
+        </property>
+        <property name="buddy">
+         <cstring>comboLanguage</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="1">
+       <widget class="QComboBox" name="comboLanguage"/>
+      </item>
+      <item row="7" column="1">
+       <widget class="QCheckBox" name="checkOriginalOnly">
+        <property name="text">
+         <string>Only original works</string>
         </property>
        </widget>
       </item>
@@ -96,11 +155,16 @@
   </layout>
  </widget>
  <tabstops>
+  <tabstop>editKeywords</tabstop>
+  <tabstop>comboMode</tabstop>
   <tabstop>spinMaxCount</tabstop>
   <tabstop>checkDateFrom</tabstop>
   <tabstop>dateFrom</tabstop>
   <tabstop>checkDateTo</tabstop>
   <tabstop>dateTo</tabstop>
+  <tabstop>comboLength</tabstop>
+  <tabstop>comboLanguage</tabstop>
+  <tabstop>checkOriginalOnly</tabstop>
  </tabstops>
  <resources/>
  <connections>
@@ -139,7 +203,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>CSearchLimitsDialog</receiver>
+   <receiver>CPixivIndexLimitsDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -155,7 +219,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>CSearchLimitsDialog</receiver>
+   <receiver>CPixivIndexLimitsDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
