--- a/translator/translatorcachedialog.ui
+++ b/translator/translatorcachedialog.ui
@@ -38,6 +38,9 @@
      <property name="selectionBehavior">
       <enum>QAbstractItemView::SelectRows</enum>
      </property>
+     <property name="sortingEnabled">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
    <item>
