--- a/utils/pixivindexlimitsdialog.ui
+++ b/utils/pixivindexlimitsdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>459</width>
-    <height>367</height>
+    <height>396</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -156,6 +156,13 @@
        <widget class="QCheckBox" name="checkOriginalOnly">
         <property name="text">
          <string>Only original works</string>
+        </property>
+       </widget>
+      </item>
+      <item row="9" column="1">
+       <widget class="QCheckBox" name="checkFetchCovers">
+        <property name="text">
+         <string>Fetch cover images</string>
         </property>
        </widget>
       </item>
