--- a/utils/pixivindextab.ui
+++ b/utils/pixivindextab.ui
@@ -68,6 +68,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="buttonSave">
+       <property name="text">
+        <string>Save</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="buttonReport">
        <property name="text">
         <string>HTML report</string>
@@ -200,6 +207,7 @@
   <tabstop>editDescription</tabstop>
   <tabstop>comboSort</tabstop>
   <tabstop>buttonTranslateTitles</tabstop>
+  <tabstop>buttonSave</tabstop>
   <tabstop>buttonReport</tabstop>
   <tabstop>editFilter</tabstop>
   <tabstop>buttonStopTranslator</tabstop>
