--- a/utils/pixivindextab.ui
+++ b/utils/pixivindextab.ui
@@ -158,14 +158,28 @@
     </widget>
    </item>
    <item>
-    <widget class="QTextBrowser" name="editDescription">
-     <property name="maximumSize">
-      <size>
-       <width>16777215</width>
-       <height>125</height>
-      </size>
-     </property>
-    </widget>
+    <layout class="QHBoxLayout" name="horizontalLayout_4">
+     <item>
+      <widget class="QLabel" name="labelCover">
+       <property name="frameShape">
+        <enum>QFrame::StyledPanel</enum>
+       </property>
+       <property name="text">
+        <string>TextLabel</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QTextBrowser" name="editDescription">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>125</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
    <item>
     <widget class="QFrame" name="frameTranslator">
