--- a/utils/settingstab.ui
+++ b/utils/settingstab.ui
@@ -28,7 +28,7 @@
         <x>0</x>
         <y>0</y>
         <width>822</width>
-        <height>4471</height>
+        <height>4517</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -83,7 +83,7 @@
             <property name="title">
              <string>Browser</string>
             </property>
-            <layout class="QHBoxLayout" name="horizontalLayout_16">
+            <layout class="QHBoxLayout" name="horizontalLayout_37">
              <item>
               <widget class="QGroupBox" name="groupBox_2">
                <property name="title">
@@ -156,11 +156,24 @@
                   </property>
                  </widget>
                 </item>
+                <item>
+                 <spacer name="verticalSpacer_2">
+                  <property name="orientation">
+                   <enum>Qt::Vertical</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>20</width>
+                    <height>40</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
                </layout>
               </widget>
              </item>
              <item>
-              <layout class="QVBoxLayout" name="verticalLayout_30">
+              <layout class="QVBoxLayout" name="verticalLayout_18">
                <item>
                 <layout class="QHBoxLayout" name="horizontalLayout_36">
                  <item>
@@ -352,47 +365,61 @@
                 </layout>
                </item>
                <item>
-                <layout class="QVBoxLayout" name="verticalLayout_18">
-                 <item>
-                  <widget class="QCheckBox" name="checkUserAgent">
-                   <property name="text">
-                    <string>Override user agent</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QComboBox" name="editUserAgent">
-                   <property name="sizePolicy">
-                    <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-                     <horstretch>0</horstretch>
-                     <verstretch>0</verstretch>
-                    </sizepolicy>
-                   </property>
-                   <property name="maximumSize">
-                    <size>
-                     <width>600</width>
-                     <height>16777215</height>
-                    </size>
-                   </property>
-                   <property name="editable">
-                    <bool>true</bool>
-                   </property>
-                  </widget>
-                 </item>
-                </layout>
+                <widget class="QGroupBox" name="groupBox_21">
+                 <property name="title">
+                  <string>User agent</string>
+                 </property>
+                 <layout class="QHBoxLayout" name="horizontalLayout_41">
+                  <item>
+                   <widget class="QCheckBox" name="checkUserAgent">
+                    <property name="text">
+                     <string>Override</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QComboBox" name="editUserAgent">
+                    <property name="sizePolicy">
+                     <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                      <horstretch>0</horstretch>
+                      <verstretch>0</verstretch>
+                     </sizepolicy>
+                    </property>
+                    <property name="maximumSize">
+                     <size>
+                      <width>600</width>
+                      <height>16777215</height>
+                     </size>
+                    </property>
+                    <property name="editable">
+                     <bool>true</bool>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </widget>
                </item>
                <item>
-                <spacer name="verticalSpacer_18">
-                 <property name="orientation">
-                  <enum>Qt::Vertical</enum>
+                <widget class="QGroupBox" name="groupBox_24">
+                 <property name="title">
+                  <string>Autofill assistant</string>
                  </property>
-                 <property name="sizeHint" stdset="0">
-                  <size>
-                   <width>20</width>
-                   <height>40</height>
-                  </size>
-                 </property>
-                </spacer>
+                 <layout class="QHBoxLayout" name="horizontalLayout_16">
+                  <item>
+                   <widget class="QLabel" name="label_19">
+                    <property name="text">
+                     <string>Text paste hotkey</string>
+                    </property>
+                    <property name="buddy">
+                     <cstring>autofillHotkey</cstring>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QKeySequenceEdit" name="autofillHotkey"/>
+                  </item>
+                 </layout>
+                </widget>
                </item>
               </layout>
              </item>
@@ -2202,6 +2229,7 @@
   <tabstop>spinCacheSize</tabstop>
   <tabstop>checkUserAgent</tabstop>
   <tabstop>editUserAgent</tabstop>
+  <tabstop>autofillHotkey</tabstop>
   <tabstop>radioSearchNone</tabstop>
   <tabstop>radioSearchRecoll</tabstop>
   <tabstop>radioSearchBaloo5</tabstop>
